--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Compiled class file
 *.class
-
+*.mvn
 # Log file
 *.log
 
@@ -18,6 +18,25 @@
 *.zip
 *.tar.gz
 *.rar
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
